# heliokos

./: .env.example  .gitignore  README.md  heliokos_repl.ipynb  package.json  pyproject.toml  tox.ini
docs/: domain-vision-statement.md
src/heliokos/: domain.py
src/heliokos/domain/: core.py  helioregion.ttl  uat.ttl
src/heliokos/infra/: config.py  constants.py  core.py  csvw.ttl  dc.ttl  owl.ttl  qudt-constant.ttl  qudt-datatype.ttl  qudt-dimensionvector.ttl  qudt-quantitykind.ttl  qudt-sou.ttl  rdf.ttl  rdfs.ttl  skos.ttl
src/heliokos/infra/static/: agu_index_terms.ttl  dcterms.ttl  foaf.ttl  org.ttl  prov.ttl  qudt-soqk.ttl  qudt-unit.ttl  qudt.ttl  rdfa11.json  schemaorg.ttl  shacl.ttl
src/heliokos/ui/: core.py  html.py  main.py
src/heliokos/ui/static/: app.css
src/heliokos/ui/static/css/: app.css
src/heliokos/ui/static/js/: app.js
src/heliokos/ui/static/js/components/: form.js  handlers.js  hk-combo-box.js  hk-form.js  hk-relationships.js  hk-restrict-select.js  hk-select.js  hk-update-select.js
src/heliokos/ui/static/nasawds/css/: styles.css  styles.css.map  styles.min.css
src/heliokos/ui/templates/: base.html  concept.html  concept_neighborhood.html  concepts-search.html  concepts.html  home.html  scheme.html  schemes.html
tests/: oax_uat_mapping_table.csv  test_e2e.py  test_functions.py  test_units.py
